# imageGen

./: .gitignore  README.md  demo.py  download_model.py  requirements.txt  setup.sh
boogu_pkg/: pyproject.toml
boogu_pkg/boogu/models/: attention_processor.py
boogu_pkg/boogu/models/transformers/: __init__.py  block_lumina2.py  rope.py  transformer_boogu.py
boogu_pkg/boogu/pipelines/: lora_pipeline.py
boogu_pkg/boogu/pipelines/boogu/: instruct_reasoner_static_skills.py  pipeline_boogu.py  pipeline_boogu_turbo.py
boogu_pkg/boogu/utils/: validator_utils.py
boogu_pkg/boogu_image.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
